fecdat/force-app/main/default/objects/FEC_DNB__c/FEC_DNB__c.object-meta.xml
<CustomObject>
    <label>DNB</label>
    <nameField>
        <displayFormat>DNBN - {0}</displayFormat>
        <label>DNB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DNB</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>