fecdat/force-app/main/default/objects/FEC_DNB__c/fields/FEC_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>DNB</relationshipLabel>
    <relationshipName>DNB</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>