fecdat/force-app/main/default/objects/FEC_DNB__c/fields/FEC_DNB_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_DNB_Expiry_Date__c</fullName>
    <label>DNB Expiry Date</label>
    <type>Date</type>
</CustomField>