fecdat/force-app/main/default/objects/FEC_DNB__c/fields/FEC_Phone_Email_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Email_Type__c</fullName>
    <label>Phone/ Email Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>