fecdat/force-app/main/default/objects/FEC_DNB__c/fields/FEC_Phone_Number_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Number_Email__c</fullName>
    <label>Phone Number/ Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>